kubernetes/talos/deploy/vikunja/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vikunja
spec:
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: vikunja
      release: vikunja
  template:
    metadata:
      labels:
        app: vikunja
        release: vikunja
    spec:
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      containers:
        # --- General ---
      - image: vikunja/vikunja:latest
        imagePullPolicy: IfNotPresent
        name: vikunja
        securityContext:
          runAsUser: 65534
          runAsGroup: 65534
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
        # ---------------
      
        # --- Network ---
        ports:
        - containerPort: 3456
          name: http
          protocol: TCP
        # ---------------

        # --- Env ---
        readinessProbe:
          failureThreshold: 6
          successThreshold: 1
          initialDelaySeconds: 0
          timeoutSeconds: 1
          periodSeconds: 5
          httpGet:
            scheme: HTTP
            port: 3456
            path: /
        livenessProbe:
          failureThreshold: 6
          successThreshold: 1
          initialDelaySeconds: 0
          timeoutSeconds: 1
          periodSeconds: 5
          tcpSocket:
            port: 3456
        # ---------------

        # --- Mounts ---
        volumeMounts:
        - mountPath: /app/vikunja/files
          name: files
        #  ---------------
      volumes:
      - name: files
        persistentVolumeClaim:
          claimName: vikunja-files
